snapshot: created separate API url and commands
The snapshot is made up of two files:
1. the Firecracker/hypervisor state snapshot file,
2. the guest memory snapshot file.

API changed:
 - PUT /machine-config - takes extra parameter specifying path for
                         file mapped guest memory
 - PUT /snapshot/create - pauses the microVM and creates a snapshot
 - PUT /snapshot/load - loads microVM state from snapshot and resumes

Internal changes:

The guest memory backing file path is specified during initial
configuration of the `machine-config`. Specifying an existing file is
not allowed - Firecracker will start with a clean, sparse memory file.
The memory file path is no longer embedded in the snapshot file.

`PauseToSnapshot` is only supported on microVMs that have the guest
memory backed by a host file.

`ResumeFromSnapshot` should takes paths for both files that make up
the complete snapshot.
